# intern_challenge

./: .gitignore  README.md  arg_parse_util.py  benchmark_test_cases.py  hyperparameter_search.py  learning_rate_scheduler_util.py  loss_curve_test.py  loss_tracking_utils.py  placement.py  profiler_helper.py  test.py  torch_profiler_util.py
cpp/: CMakeLists.txt  CMakePresets.json  PORT_PLAN.md  benchmark.cpp  generation.cpp  generation.cu  losses.cpp  main.cpp  metrics.cpp  placement.cpp  placement_cuda.cpp  placement_cuda_implementation_plan.md  placement_cuda_python_mapping.md  placement_cuda_tensor_setup.cu  placement_cuda_tensor_setup.h  placement_pytorch_cuda.cpp  placement_pytorch_cuda_tensor_setup.cu  placement_pytorch_cuda_tensor_setup.h  sqlite_utils.cpp  test.cpp  training.cpp  vcpkg.json  visualization.cpp
cpp/cmake/: RunCoverage.cmake
cpp/include/placement/: benchmark.h  generation.h  generation_cuda.h  losses.h  metrics.h  profiler.h  sqlite_utils.hpp  training.h  types.h  visualization.h
cpp/tests/: metrics_tests.cpp  visualization_tests.cpp
lab/: loss_curve_test.py  loss_tracking.ipynb  profiling.ipynb
lab/.ipynb_checkpoints/: profiling-checkpoint.ipynb
scripts/: profile_cpu_trace.sh  profile_gpu_trace.sh
